Add ability to merge pair of lines
More data is sliced from the source datasets of the initial lines.
Add transpose option to aggregate tool

Change-Id: I81de4bccf82083cabc4ec2644633fcca19ed15df